--- a/dev/sass/components/general/_navbar.scss
+++ b/dev/sass/components/general/_navbar.scss
@@ -60,7 +60,7 @@
       padding: 10px;
     }
 
-    div {
+    a {
       display: table-cell;
       padding-right: $nav-items-padding;
       width: 80px;
